# Minikan-Board

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_boards.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: board_commands.rs  card_commands.rs  cards.rs  mod.rs
src-tauri/src/db/: board_repo.rs  card_repo.rs  cards.rs  connection.rs  mod.rs
src-tauri/src/models/: board.rs  card.rs  mod.rs
src/components/: Addtaskmodal.jsx  Boardheader.jsx  Boardsidebar.jsx  Kanbanboard.jsx  Kanbancard.jsx  Kanbancolumn.jsx
src/hooks/: useCards.js  useDragAndDrop.js  useWindowWidth.js
src/lib/: kanbanConstants.js
src/styles/: variables.css
